텍스트를  지웠습니다

--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular.min.js"></script>
 	</head>
+
+
 	<body>
-		<h1>imageteller</h1>
-		<h2>imageteller</h2>
-		<h3>imageteller</h3>
-		<p>I'm Jiin Ahn.</p>
-		<p>우왕</p>
-		<h1>굿</h1>
-		<br>sdfjsldflka;fjdlsfsldfjaslfjalsdfjlsafjasldfjsadlfjasfjasflasjflsjdflajsflasjflskdjfasjfas</br>
+	
+	<div class="container">
+	<h1>imageteller</h1>
+
 		<script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 		<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 	</body>
