--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	
 	<div class="container">
 	<h1>imageteller</h1>
-
+	<img src="profile.jpg"></script>
 		<script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 		<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 	</body>
