--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 	
 	<div class="container">
 	<h1>imageteller</h1>
+	<h2>5월에 음반을 낸다니께요</h2>
+	<center>
 	<img src="profile.jpg"></script>
+	<p>http://soundcloud.com/imageteller</p>
+	</center>
+
 		<script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 		<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 	</body>
