노랠 넣을수있을

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 	<center>
 	<img src="profile.jpg"></script>
 	<p>http://soundcloud.com/imageteller</p>
+	<src="bgm.mp3"></src>
 	</center>
 
 		<script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 		<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+
 	</body>
 </html>
