텍스트에 링크걸기
음악듣

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 	<h2>5월에 음반을 낸다니께요</h2>
 	<center>
 	<img src="profile.jpg"></script>
-	<p>http://soundcloud.com/imageteller</p>
-	<src="bgm.mp3"></src>
+	
+	<p>	<a href="http://soundcloud.com/imageteller">음악듣기</a></p>
+
 	</center>
 
 		<script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
