--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<h1>imageteller</h1>
 	<h2>5월에 음반을 낸다니께요</h2>
 	<center>
-	<img src="profile.jpg"></script>
+	<a href="http://soundcloud.com/imageteller"> <img src="profile.jpg"></a></script>
 	
 	<p>	<a href="http://soundcloud.com/imageteller">음악듣기</a></p>
 
