이메일, 페이스북 주소링크 삽입

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
 	<div class="container">
 	<h1>imageteller</h1>
 	<h2>5월에 음반을 낸다니께요</h2>
+	<h3><a href="http://facebook.com/imageteller">facebook</a>
+	<a href="mailto:jiin.imageteller@gmail.com">gmail</a>
+</h3>
+
 	<center>
-	<a href="http://soundcloud.com/imageteller"> <img src="profile.jpg"></a></script>
+	<a href="http://soundcloud.com/imageteller"><img src="profile.jpg"></a></script>
 	
 	<p>	<a href="http://soundcloud.com/imageteller">음악듣기</a></p>
 
