--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 	
 	<div class="container">
 	<h1>imageteller</h1>
-	<h2>5월에 음반을 낸다니께요</h2>
-	<h3><a href="http://facebook.com/imageteller">facebook</a>
-	<a href="mailto:jiin.imageteller@gmail.com">gmail</a>
+	
+	<h3><a href="http://facebook.com/imageteller">facebook</a></h3>
+	<h3><a href="mailto:jiin.imageteller@gmail.com">gmail</a></h3>
 </h3>
 
 	<center>
