--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial scale=1">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap.min.css">
+	<link rel="shortcut icon" href="favicon.ico"
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular.min.js"></script>
 	</head>
 
