--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial scale=1">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap.min.css">
 	<link rel="shortcut icon" href="favicon.ico">
-	<link rel="apple-touch-icon-precomposed" sized="114x114" href="icon144.png">
+	<link rel="apple-touch-icon-precomposed" sized="114x114" href="jiin.png">
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular.min.js"></script>
 	</head>
 
