--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>imageteller</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial scale=1">
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap.min.css">
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="apple-touch-icon-precomposed" sized="114x114" href="jiin.png">
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular.min.js"></script>
