--- a/Test/WEB/index_bkup.html
+++ b/Test/WEB/index_bkup.html
@@ -12,41 +12,41 @@
 
 
 	<body>
-
-
+	
 	<div class="container">
+	
+
 		<div class="row">
+			<div class="col-lg-4">
+				<h1>imageteller</h1>
+					</div>
 
-			<div class="col-xs-8">
-			</div>
+					<div class="col-lg-4"
+						<a href="http://soundcloud.com/imageteller"><img src="profile.jpg"></a></script>
 
-			<div class="col-xs-4">
-				<h1>TEAM : 1 / ID : 1-1 </h1>
-			</div>
+							
 
+						
+					</div>
+			<div class="col-lg-4">
+				</div>
 		</div>
-		<div class="row">
-			title01
-		</div>
-		<div class="row">
-			<div class="col-xs-4">
-			BUY
-			</div>
-			<div class="col-xs-4" >
-			SELL
-			</div>
-			<div class="col-xs-4" >
-			TRADE
-			</div>
 
+
+
+		<div class="row">
+			<div class="col-lg-8">
+			</div>
+			<div class="col-lg-4">
+				<h3><a href="http://facebook.com/imageteller">facebook</a></h3>
+				<h3><a href="mailto:jiin.imageteller@gmail.com">gmail</a></h3>
+			</div>	
+		
 		</div>
 	</div>
 
-
-
-		
 	<script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 							<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
 	</body>
-</html></script>
+</html>
