--- a/Test/WEB/index.html
+++ b/Test/WEB/index.html
@@ -17,15 +17,13 @@
 	<div class="container">
 		<div class="row">
 
-			<div class="col-xs-8">
-			</div>
-
-			<div class="col-xs-4">
+			<div class="col-xs-12">
+		
 				<h1>TEAM : 1 / ID : 1-1 </h1>
 			</div>
 
 		</div>
-		<div class="row">
+		<div class="row",style="background-color : ivory">
 			title01
 		</div>
 		<div class="row">
