--- a/Test/WEB/index.html
+++ b/Test/WEB/index.html
@@ -19,22 +19,22 @@
 
 			<div class="col-xs-12">
 		
-				<h1>TEAM : 1 / ID : 1-1 </h1>
+				<h3>TEAM : 1 / ID : 1-1 </h3>
 			</div>
 
 		</div>
-		<div class="row",style="background-color : ivory">
-			title01
+		<div class="row",style="background-color: red; height: 101px;">
+			<h3>title01</h3>
 		</div>
 		<div class="row">
 			<div class="col-xs-4">
-			BUY
+			<h3>BUY</h3>
 			</div>
 			<div class="col-xs-4" >
-			SELL
+			<h3>SELL</h3>
 			</div>
 			<div class="col-xs-4" >
-			TRADE
+			<h3>TRADE</h3>
 			</div>
 
 		</div>
