--- a/Test/WEB/index.html
+++ b/Test/WEB/index.html
@@ -23,17 +23,17 @@
 			</div>
 
 		</div>
-		<div class="row",style="background-color: red; height: 101px;">
+		<div class="row",style="background-color: red; height: 100px;">
 			<h3>title01</h3>
 		</div>
 		<div class="row">
-			<div class="col-xs-4">
+			<div class="col-xs-4",style="height: 200px;">
 			<h3>BUY</h3>
 			</div>
-			<div class="col-xs-4" >
+			<div class="col-xs-4",style="height: 200px;" >
 			<h3>SELL</h3>
 			</div>
-			<div class="col-xs-4" >
+			<div class="col-xs-4",style="height: 200px;" >
 			<h3>TRADE</h3>
 			</div>
 
