--- a/Test/WEB/index.html
+++ b/Test/WEB/index.html
@@ -17,7 +17,9 @@
 	<div class="container">
 		<div class="row">
 
-			<div class="col-xs-12">
+			<div class="col-xs-6">
+			</div>
+			<div class="col-xs-6">
 		
 				<h5>TEAM : 1 / ID : 1-1 </h5>
 			</div>
