--- a/Test/WEB/index.html
+++ b/Test/WEB/index.html
@@ -17,60 +17,58 @@
 	<div class="container">
 		<div class="row">
 
-			<div class="col-xs-6">
-			</div>
-			<div class="col-xs-6">
+			
+			<div class="col-xs-6" style="float:right;">
 		
 				<h5>TEAM : 1 / ID : 1-1 </h5>
 			</div>
 
 		</div>
-		<div class="row",style="background-color: red; height: 100px;">
+		<div class="row" style="background-color: #013859" "height: 100px;">
 			<h4>title01</h4>
 		</div>
 		<div class="row">
-			<div class="col-xs-4",style="height: 200px;">
+			<div class="col-xs-4" style= background-color: #F9CC7F height: 200px;>
 			<h3>BUY</h3>
 			</div>
-			<div class="col-xs-4",style="height: 200px;" >
+			<div class="col-xs-4" style= background-color : #F15C25 height: 200px;>
 			<h3>SELL</h3>
 			</div>
-			<div class="col-xs-4",style="height: 200px;" >
+			<div class="col-xs-4" style= backbround-color : #9E1617 height: 200px;>
 			<h3>TRADE</h3>
 			</div>
 		</div>
 
-		<div class="row",style="background-color: red; height: 100px;">
+		<div class="row" style="background-color: #013859" "height: 100px;">
 			<h4>title02</h4>
 		</div>
 		<div class="row">
-			<div class="col-xs-4",style="height: 200px;">
+			<div class="col-xs-4" style= background-color: #F9CC7F height: 200px;>
 			<h3>BUY</h3>
 			</div>
-			<div class="col-xs-4",style="height: 200px;" >
+			<div class="col-xs-4" style= background-color : #F15C25 height: 200px;>
 			<h3>SELL</h3>
 			</div>
-			<div class="col-xs-4",style="height: 200px;" >
+			<div class="col-xs-4" style= backbround-color : #9E1617 height: 200px;>
 			<h3>TRADE</h3>
 			</div>
 		</div>
 
 
-		<div class="row",style="background-color: red; height: 100px;">
+		<div class="row" style="background-color: #013859" "height: 100px;">
 			<h4>title03</h4>
 		</div>
 		<div class="row">
-			<div class="col-xs-4",style="height: 200px;">
+			<div class="col-xs-4" style= background-color: #F9CC7F height: 200px;>
 			<h3>BUY</h3>
 			</div>
-			<div class="col-xs-4",style="height: 200px;" >
+			<div class="col-xs-4" style= background-color : #F15C25 height: 200px;>
 			<h3>SELL</h3>
 			</div>
-			<div class="col-xs-4",style="height: 200px;" >
+			<div class="col-xs-4" style= backbround-color : #9E1617 height: 200px;>
 			<h3>TRADE</h3>
 			</div>
 		</div>
-
 	</div>
 
 
