--- a/Test/WEB/index.html
+++ b/Test/WEB/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 	<head>
@@ -28,13 +29,13 @@
 			<h4>title01</h4>
 		</div>
 		<div class="row">
-			<div class="col-xs-4" style="background-color: #F9CC7F" "height: 200px">
+			<div class="col-xs-4" style="background-color: #F9CC7F" height: "100px">
 			<h3>BUY</h3>
 			</div>
-			<div class="col-xs-4" style= "background-color : #F15C25" "height: 200px">
+			<div class="col-xs-4" style="background-color : #F15C25" height: "100px">
 			<h3>SELL</h3>
 			</div>
-			<div class="col-xs-4" style= "backbround-color : #9E1617" "height: 200px">
+			<div class="col-xs-4" style="backbround-color : #9E1617" height: "100px">
 			<h3>TRADE</h3>
 			</div>
 		</div>
@@ -43,29 +44,29 @@
 			<h4>title02</h4>
 		</div>
 		<div class="row">
-			<div class="col-xs-4" style="background-color: #F9CC7F" "height: 200px">
+			<div class="col-xs-4" style="background-color: #F9CC7F" height: "100px">
 			<h3>BUY</h3>
 			</div>
-			<div class="col-xs-4" style= "background-color : #F15C25" "height: 200px">
+			<div class="col-xs-4" style="background-color : #F15C25" height: "100px">
 			<h3>SELL</h3>
 			</div>
-			<div class="col-xs-4" style= "backbround-color : #9E1617" "height: 200px">
+			<div class="col-xs-4" style="backbround-color : #9E1617" height: "100px">
 			<h3>TRADE</h3>
 			</div>
 		</div>
 
 
-		<div class="row" style="background-color: #438BD9" "height: 100px;">
+		<div class="row" style="background-color: #438BD9" height: "100px;">
 			<h4>title03</h4>
 		</div>
 		<div class="row">
-			<div class="col-xs-4" style="background-color: #F9CC7F" "height: 200px">
+			<div class="col-xs-4" style="background-color: #F9CC7F" height: "200px">
 			<h3>BUY</h3>
 			</div>
-			<div class="col-xs-4" style= "background-color : #F15C25" "height: 200px">
+			<div class="col-xs-4" style="background-color : #F15C25" height: "200px">
 			<h3>SELL</h3>
 			</div>
-			<div class="col-xs-4" style= "backbround-color : #9E1617" "height: 200px">
+			<div class="col-xs-4" style="backbround-color : #9E1617" height: "200px">
 			<h3>TRADE</h3>
 			</div>
 		</div>
