--- a/Test/WEB/index.html
+++ b/Test/WEB/index.html
@@ -19,7 +19,7 @@
 		<div class="row">
 
 			
-			<div class="col-xs-6" style=text-align:right>
+			<div class="col-xs-12" style=text-align:right>
 		
 				<h5>TEAM : 1 / ID : 1-1 </h5>
 			</div>
@@ -70,6 +70,9 @@
 			<h3>TRADE</h3>
 			</div>
 		</div>
+		<div class="row"
+		<br>높이를 지정했지만 적용되지 않았습니다. trade div의 색상이 적용되지 않았습니다. 왜이럴까요? </br>
+
 	</div>
 
 
