div 연습을해볼까요 col-xs-1

--- a/Test/WEB/index.html
+++ b/Test/WEB/index.html
@@ -72,7 +72,43 @@
 		</div>
 		<div class="row"
 		<br>높이를 지정했지만 적용되지 않았습니다. trade div의 색상이 적용되지 않았습니다. 왜이럴까요? </br>
-
+		</div>
+			<div class="col-xs-1" style="background-color: #F9CC7F" height: "200px">
+			<h5>1</h5>
+			</div>	
+			<div class="col-xs-1" style="background-color: #9E1617" height: "200px">
+			<h5>2</h5>
+			</div>
+			<div class="col-xs-1" style="background-color: #F9CC7F" height: "200px">
+			<h5>3</h5>
+			</div>	
+			<div class="col-xs-1" style="background-color: #9E1617" height: "200px">
+			<h5>4</h5>
+			</div>
+			<div class="col-xs-1" style="background-color: #F9CC7F" height: "200px">
+			<h5>5</h5>
+			</div>	
+			<div class="col-xs-1" style="background-color: #9E1617" height: "200px">
+			<h5>6</h5>
+			</div>
+			<div class="col-xs-1" style="background-color: #F9CC7F" height: "200px">
+			<h5>7</h5>
+			</div>	
+			<div class="col-xs-1" style="background-color: #9E1617" height: "200px">
+			<h5>8</h5>
+			</div>
+			<div class="col-xs-1" style="background-color: #F9CC7F" height: "200px">
+			<h5>9</h5>
+			</div>	
+			<div class="col-xs-1" style="background-color: #9E1617" height: "200px">
+			<h5>10</h5>
+			</div>
+			<div class="col-xs-1" style="background-color: #F9CC7F" height: "200px">
+			<h5>11</h5>
+			</div>	
+			<div class="col-xs-1" style="background-color: #9E1617" height: "200px">
+			<h5>12</h5>
+			</div>
 	</div>
 
 
