--- a/Test/WEB/index.html
+++ b/Test/WEB/index.html
@@ -70,9 +70,10 @@
 			<h3>TRADE</h3>
 			</div>
 		</div>
-		<div class="row"
+		<div class="row">
 		<br>높이를 지정했지만 적용되지 않았습니다. trade div의 색상이 적용되지 않았습니다. 왜이럴까요? </br>
 		</div>
+		<div class="row">
 			<div class="col-xs-1" style="background-color: #F9CC7F" height: "200px">
 			<h5>1</h5>
 			</div>	
@@ -109,6 +110,7 @@
 			<div class="col-xs-1" style="background-color: #9E1617" height: "200px">
 			<h5>12</h5>
 			</div>
+		</div>
 	</div>
 
 
