부트스트랩 불러오기 코드 수
bootstrap을 불러오는 주소 앞에 스킴 'http://'를 붙였다. jQuary 불러오는 구문을 헤드쪽으로 옮겼

--- a/Test/WEB/index.html
+++ b/Test/WEB/index.html
@@ -5,10 +5,12 @@
 		<title>imageteller</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="apple-touch-icon-precomposed" sized="114x114" href="jiin.png">
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular.min.js"></script>			
+	<script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
+							<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 	</head>
 
 
@@ -50,7 +52,7 @@
 			<div class="col-xs-4" style="background-color : #F15C25" height: "100px">
 			<h3>SELL</h3>
 			</div>
-			<div class="col-xs-4" style="backbround-color : #9E1617" height: "100px">
+			<div class="col-xs-4" style="backbround-color : #9E1617" height: "200px">
 			<h3>TRADE</h3>
 			</div>
 		</div>
@@ -115,9 +117,7 @@
 
 
 
-		
-	<script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
-							<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+
 
 	</body>
 </html></script>
